add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Cristiano Ronaldo 🐐</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
+      <nav>
+        <h1>Cristiano Ronaldo 🐐</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </nav>
+    
+      <main>
+        <!-- Sidebar section -->
+        <div class="sidebar">
+          <img class="sidebar-img" src="https://assets.manutd.com/AssetPicker/images/0/0/10/126/687707/Legends-Profile_Cristiano-Ronaldo1523460877263.jpg">
+        </div>
       
+        <!-- Content section -->
+        <div class="content">
+          <h2>Cristiano Ronaldo</h2>
+          <p> Cristiano Ronaldo (born February 5, 1985, Funchal, Madeira, Portugal) is a Portuguese football (soccer) forward who is one of the greatest players of his generation. Ronaldo is the winner of five Ballon d’Or awards (2008, 2013, 2014, 2016, and 2017), and in 2024 he became the first men’s player to score 900 career goals in official matches.
+          </p>
+
+  <!-- Titles & achievements section -->
+  <div id="Titles & achievements">
+    <h3>Titles & achievements</h3>
+    <ul>
+      <li>3x The Best FIFA Men's Player</li>
+      <li>5x Winner Ballon d'Or</li>
+      <li>4x UEFA Best Player in Europe</li>
+      <li>4x Golden Boot winner (Europe)</li>
+      <li>13x Footballer of the Year</li>
+      <li>1x FIFA Puskás Award</li>
+    </ul>
+        </div>
+      </main>
     </div>
   </body>
 </html>
